--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -25,7 +25,21 @@ subgraphs: {}
 sqlModels:
   .prophecy/metadata/sqlmodels/stg_orders:
     name: stg_orders
-    schema: null
+    schema:
+      providerType: Databricks
+      fields:
+      - name: order_id
+        dataType:
+          type: Integer
+      - name: customer_id
+        dataType:
+          type: Integer
+      - name: order_date
+        dataType:
+          type: Date
+      - name: status
+        dataType:
+          type: String
     description: null
     author: bobw@prophecy.io
     files:
@@ -38,7 +52,36 @@ sqlModels:
     createdAt: '2024-03-27 20:39:35'
   .prophecy/metadata/sqlmodels/orders:
     name: orders
-    schema: null
+    schema:
+      providerType: Databricks
+      fields:
+      - name: order_id
+        dataType:
+          type: Integer
+      - name: customer_id
+        dataType:
+          type: Integer
+      - name: order_date
+        dataType:
+          type: Date
+      - name: status
+        dataType:
+          type: String
+      - name: credit_card_amount
+        dataType:
+          type: Double
+      - name: coupon_amount
+        dataType:
+          type: Double
+      - name: bank_transfer_amount
+        dataType:
+          type: Double
+      - name: gift_card_amount
+        dataType:
+          type: Double
+      - name: amount
+        dataType:
+          type: Double
     description: This table has basic information about orders, as well as some derived
       facts based on payments
     author: bobw@prophecy.io
@@ -52,7 +95,30 @@ sqlModels:
     createdAt: '2024-03-27 20:39:35'
   .prophecy/metadata/sqlmodels/customers:
     name: customers
-    schema: null
+    schema:
+      providerType: Databricks
+      fields:
+      - name: customer_id
+        dataType:
+          type: Integer
+      - name: first_name
+        dataType:
+          type: String
+      - name: last_name
+        dataType:
+          type: String
+      - name: first_order
+        dataType:
+          type: Date
+      - name: most_recent_order
+        dataType:
+          type: Date
+      - name: number_of_orders
+        dataType:
+          type: Bigint
+      - name: customer_lifetime_value
+        dataType:
+          type: Double
     description: This table has basic information about a customer, as well as some
       derived facts based on a customer's orders
     author: bobw@prophecy.io
@@ -64,9 +130,43 @@ sqlModels:
       models: []
       datasets: []
     createdAt: '2024-03-27 20:39:35'
+  .prophecy/metadata/sqlmodels/customer_orders:
+    name: customer_orders
+    schema:
+      providerType: Databricks
+      fields:
+      - name: order_count
+        dataType:
+          type: Bigint
+      - name: sales_total
+        dataType:
+          type: Double
+    description: null
+    author: bobw@prophecy.io
+    files:
+    - models/customer_orders.sql
+    - .prophecy/ide/models/customer_orders.json
+    sqlDependencies:
+      models: []
+      datasets: []
+    createdAt: '2024-03-27 20:40:25'
   .prophecy/metadata/sqlmodels/stg_payments:
     name: stg_payments
-    schema: null
+    schema:
+      providerType: Databricks
+      fields:
+      - name: payment_id
+        dataType:
+          type: Integer
+      - name: order_id
+        dataType:
+          type: Integer
+      - name: payment_method
+        dataType:
+          type: String
+      - name: amount
+        dataType:
+          type: Double
     description: null
     author: bobw@prophecy.io
     files:
@@ -79,7 +179,18 @@ sqlModels:
     createdAt: '2024-03-27 20:39:35'
   .prophecy/metadata/sqlmodels/stg_customers:
     name: stg_customers
-    schema: null
+    schema:
+      providerType: Databricks
+      fields:
+      - name: customer_id
+        dataType:
+          type: Integer
+      - name: first_name
+        dataType:
+          type: String
+      - name: last_name
+        dataType:
+          type: String
     description: null
     author: bobw@prophecy.io
     files:
